--- a/index.html
+++ b/index.html
@@ -275,46 +275,46 @@
 	</section> -->
 
 
-	<!--<section id="organizers">
+	<section id="organizers">
 		<div class="container">
 			 <div class="col-lg-12 text-center">
 						<h2 class="section-heading">Organizers</h2>
 						<hr class="primary">
 			 </div>
 		</div>-->   
-		<!--<div class="row text-black">
+		<div class="row text-black">
 				<div class="col-lg-offset-2 col-lg-4 text-center">
 					<div class="service-box">
 
 						<img class="img-circle" src="./img/organizers/roberto.png" alt="Rounded image" width="150" height="150">
 						<h2><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></h2>
-						<p>University of Helsinki</p>
+						<p>EURECOM</p>
 					</div>
 
 				</div>
 
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
-						<img class="img-circle" src="./img/organizers/KTKim.jpg" alt="Rounded image" width="150" height="150">
-						<h2><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim</a></h2>
-						<p>Purdue University</p>
+						<img class="img-circle" src="./img/organizers/jang.png" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://siyoungjang.github.io/" target="_blank" rel="noopener noreferrer">SiYoung Jang</a></h2>
+						<p>Nokia Bell Labs</p>
 					</div>
 
 				</div>
 
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
-						<img class="img-circle" src="./img/organizers/edward.png" alt="Rounded image" width="150" height="150">
-						<h3><a href="https://www.ejaywang.com/">Edward Wang</a></h3>
-						<p>Assistant Professor<br>University of California San Diego</p>
+						<img class="img-circle" src="./img/organizers/ahmed.jpeg" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://eecs.qmul.ac.uk/~ahmed/" target="_blank" rel="noopener noreferrer">Ahmed M. A. Sayed</a></h2>
+						<p>Queen Mary University of London</p>
 					</div>
 
-				</div>--> 
+				</div>
 
 				
-		<!--</div>
+		</div>
 	
-	</section>-->
+	</section>
 
 
 	<section id="program-committee">
@@ -350,7 +350,7 @@
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 					</ul>	
-						<!-- <li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
+						<!--
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
 						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, University of Helsinki</a></p></li>
