--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 						<a class="page-scroll" href="#registration">Registration</a>
 					</li> -->
 
-					<!--<li>
+					<li>
 						<a class="page-scroll" href="#organizers">Organizers</a>
-					</li> -->
+					</li>
 
 					<li>
 						<a class="page-scroll" href="#program-committee">Committee</a>
@@ -283,7 +283,7 @@
 			 </div>
 		</div>-->   
 		<div class="row text-black">
-				<div class="col-lg-offset-3 col-lg-4 text-center">
+				<div class="col-lg-4 text-center">
 					<div class="service-box">
 
 						<img class="img-circle" src="./img/organizers/roberto.png" alt="Rounded image" width="150" height="150">
