--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 						<h2 class="section-heading">Organizers</h2>
 						<hr class="primary">
 			 </div>
-		</div>-->   
+		</div>  
 		<div class="row text-black">
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
