--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
+						<li><p><a href="https://annamandalari.com/" target="_blank" rel="noopener noreferrer">Anna Maria Mandalari, University College London</a></p></li>
 					</ul>	
 						<!--
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
