--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
 					<hr class="light">
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now online. Looking forward to receiving your works!</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[February 7th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys '24 will be co-located with ACM MobiSys '24. See you in Japan!</b>
-					</p>					
+					</p>
 					<!-- <p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
 					</p>
