--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now online. Looking forward to receiving your works!</b>
+						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys.github.io/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p>
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[February 7th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys '24 will be co-located with ACM MobiSys '24. See you in Japan!</b>
