TPC member added

--- a/index.html
+++ b/index.html
@@ -348,13 +348,14 @@
 
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
 					<ul>
+						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
-						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
 						<li><p><a href="https://annamandalari.com/" target="_blank" rel="noopener noreferrer">Anna Maria Mandalari, University College London</a></p></li>
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
 						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li>
+						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
 					</ul>	
 						<!--
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
