--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
 						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li>
 						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
+						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
 					</ul>	
 						<!--
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
