--- a/index.html
+++ b/index.html
@@ -323,6 +323,24 @@
 	<section id="program-committee">
 			<div class="container">
 			 <div class="col-lg-12 text-center">
+						<h2 class="section-heading">Steering Commitee</h2>
+						<hr class="primary">
+			 </div>
+			 <div class="row text-black text-center">
+
+				<div class="col-lg-12 col-lg-offset-1 text-left">
+					<ul>
+						<li><p><a href="https://raeng.org.uk/about-us/fellowship/new-fellows-2022/dr-mallikarjun-tatipamula-freng" target="_blank" rel="noopener noreferrer">Mallik Tatipamula, Ericsson</a></p></li>
+						<li><p><a href="https://www.cs.helsinki.fi/u/starkoma/" target="_blank" rel="noopener noreferrer">Sasu Tarkoma, University of Helsinki</a></p></li>
+						<li><p><a href="https://seng.hkust.edu.hk/about/people/faculty/brahim-bensaou" target="_blank" rel="noopener noreferrer">Brahim Bensaou, Hong Kong University of Sci & Tech</a></p></li>
+						<li><p><a href="https://www.fahim-kawsar.net/" target="_blank" rel="noopener noreferrer">Fahim Kawsar, Nokia Bell Labs & University of Glasgow</a></p></li>
+					</ul>
+
+				</div>
+			</div>
+
+			<div class="container">
+			 <div class="col-lg-12 text-center">
 						<h2 class="section-heading">Programme & General Chairs</h2>
 						<hr class="primary">
 			 </div>
