--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@
 						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
 						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
 						<li><p><a href="https://tong89.github.io/tongli.github.io/" target="_blank" rel="noopener noreferrer">Tong Li, Tsinghua University</a></p></li>
+						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, Aalto University</a></p></li>
+						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 					</ul>	
 						<!--
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
