--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
 					<ul>
 						<li><p><a href="https://researchportal.helsinki.fi/en/persons/xiaoli-liu" target="_blank" rel="noopener noreferrer">Xiaoli Liu, University of Helsinki</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/sungjungk" target="_blank" rel="noopener noreferrer">Seong-Joong Kim, ETRI</a></p></li>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
