--- a/index.html
+++ b/index.html
@@ -371,12 +371,15 @@
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
 						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Intel Corporation</a></p></li>
 						<li><p><a href="https://annamandalari.com/" target="_blank" rel="noopener noreferrer">Anna Maria Mandalari, University College London</a></p></li>
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/%ED%98%84%EC%9A%B0-%EC%9D%B4-366039ba" target="_blank" rel="noopener noreferrer">Hyunwoo Lee, KENTECH</a></p></li>
 						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li>
-						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
+						<li><p><a href="hhttps://linkedin.com/in/byoungheon-shin" target="_blank" rel="noopener noreferrer">Byoungheon Shin, Samsung Electronics</a></p></li>
 						<li><p><a href="http://cnd.iit.cnr.it/lorenzo/" target="_blank" rel="noopener noreferrer">Lorenzo Valerio, IIT-CNR</a></p></li>
 						<li><p><a href="https://tong89.github.io/tongli.github.io/" target="_blank" rel="noopener noreferrer">Tong Li, Tsinghua University</a></p></li>
+						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
 						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, Aalto University</a></p></li>
 						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://ece.princeton.edu/people/su-henry-wang" target="_blank" rel="noopener noreferrer">Su Henry Wang, Princeton University</a></p></li>
