--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 						<li><p><a href="https://sites.google.com/view/professorflaviadelicato/home" target="_blank" rel="noopener noreferrer">Flavia Delicato, Fluminense Federal University</a></p></li>
 						<li><p><a href="https://jspencer.org/" target="_blank" rel="noopener noreferrer">Jonathan Spencer, Waymo</a></p></li>
 						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li> -->
-					<p><i><b>TPC member list currently being updated.</b> Interested in joining the Technical Program Committee? Please reach out to the <a href="#organizers">organizers</a>.</i></p>
+					<!--<p><i><b>TPC member list currently being updated.</b> Interested in joining the Technical Program Committee? Please reach out to the <a href="#organizers">organizers</a>.</i></p>-->
 
 				</div>
 			</div>
