--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 			</div>
 			<div class="row text-black">
 				<div class="col-lg-12 text-center">
-					If you have any questions, please contact <i><a href="mailto:roberto.morabito@eurecom.fr" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></i>.<br>Homepage picture is an artwork created using OpenAI's DALL·E.</br>
+					If you have any questions, please contact <i><a href="mailto:netaisys@gmail.com" target="_blank" rel="noopener noreferrer">NetAISys organizers</a></i>.<br>Homepage picture is an artwork created using OpenAI's DALL·E.</br>
 				</div>
 		</div>
 	</section>
