deadline extension news

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[April 5th]</b> <b style='color:darkblue; font-size:16px;'>The paper submission deadline has been extended to April 12th!</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys24.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p>
 					<p class="text-black text-left">
