notification of acceptance date

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[April 22nd]</b> <b style='color:darkblue; font-size:16px;'>The authors notifications will be sent out to all authors on April 25, 2024.</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[April 5th]</b> <b style='color:darkblue; font-size:16px;'>The paper submission deadline has been extended to April 12th!</b>
 					</p>
 					<p class="text-black text-left">
@@ -244,7 +247,7 @@
 						<div class="text-black text-left">
 						  <ul>
 							<li><p>Submission Deadline: <b>Friday April 12th, 2024, AoE [FIRM]</b></p></li>
-							<li><p>Notification of Acceptenace: <b>Friday April 19th, 2024, AoE</b></p></li>
+							<li><p>Notification of Acceptenace: <b>Friday April 25th, 2024, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b>Wednesday May 1st, 2024, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b style='color:red;'>Friday June 7, 2024</b></p></li>
 						  </ul>         
