--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 					<li>
 						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
 					</li>
-
+					<li>
+						<a class="page-scroll" href="#workshop-program"><b style='color:red;'>Workshop Program</b> </a>
+					</li>
 					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
@@ -128,6 +130,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[May 13th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys and EnvSys to merge! Workshop Program and Presenter Instructions now available!</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[April 22nd]</b> <b style='color:darkblue; font-size:16px;'>The authors notifications will be sent out to all authors on April 25, 2024.</b>
 					</p>
 					<p class="text-black text-left">
@@ -163,6 +168,121 @@
 		</div>
 		</div>
 		</div>
+
+	<section id="workshop-program">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Networked AI Systems Workshop Program</h2>
+					<div class="col-lg-12 text-center">
+						<p class="text-black text-left">
+						Following the successful event last year at <a href="https://netaisys.github.io/archive/NetAISys23/" target="_blank" rel="noopener noreferrer">ACM MobiSys '23</a>, we have decided that this year we will again merge the NetAISys Workshop with the <a href="https://envsensys.github.io/" target="_blank" rel="noopener noreferrer">EnvSys</a> Workshop, resulting in a combined day-long event.
+						</p>	
+						<p class="text-black text-left">
+						Both workshops revolve around the role of AI, focusing on different but complementary aspects. NetAISys explores the integration of AI with networking systems, investigating the challenges and opportunities it presents. EnvSys, on the other hand, emphasizes the application of these technologies to environmental sensing, tackling crucial environmental issues using tech solutions.
+						</p>
+						<p class="text-black text-left">
+						We believe that this merger will serve as a platform for fruitful discussions and the exchange of ideas, giving you exposure to a broader spectrum of research at the intersection of networking technologies, AI, and environmental sensing. This will also provide an enriched setting where the EnvSys cases can potentially act as real-world use-cases for Networked AI Systems.
+						</p>		
+						<p class="text-black text-left">
+						The program for this joint workshop will feature a total of 10 papers and 2 keynotes. Each presentation will have a 15-minute slot, followed by a 3-minute Q&A session. Please find the detailed program schedule on the NetAISys '24 website. Note that this is a tentative schedule and may undergo minor modifications.
+						</p>			
+						<!-- <p class="text-black text-left">
+						Further information on our two keynote speakers will be shared soon. Please check back for updates.
+						</p>
+						<p class="text-black text-left">
+						<b style='color:red; font-size:16px;'> Note: This is a preliminary program and is subject to minor changes. Please check back for any updates.</b>
+						</p> -->												
+					</div>
+						<div class="service-box col-lg-12 text-center">
+							<img class="img" src="./img/program_final24.png" width="1300" height="750"> <!--  width="1480" height="695"> -->
+						</div>
+		<div class="container">
+			 <div class="col-lg-12 text-center">
+						<h2 class="section-heading">Keynotes</h2>
+						<hr class="primary">
+			 </div>
+		</div>   
+		<div class="row text-black">
+				<div class="col-lg-offset-2 col-lg-4 text-center">
+					<div class="service-box">
+						<img class="img-circle" src="./img/keynotes/sumantyo.jpeg" alt="Rounded image" width="150" height="150">
+						<h2><a href="http://www.cr.chiba-u.jp/lab/Josaphat-laboratory/" target="_blank" rel="noopener noreferrer">Prof. Josaphat Tetuko Sri Sumantyo</a></h2>
+						<p>Chiba University, Japan</p>
+						<div class="service-box col-lg-12 text-center">
+							<p><b style='color:red;'>Keynote title</b></p>
+							<p><b><i>To be Announced</i></b></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 text-center">
+					<div class="service-box">
+						<img class="img-circle" src="./img/keynotes/chulhong_min.jpeg" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://chulhong.github.io/" target="_blank" rel="noopener noreferrer">Chulhong Min</a></h2>
+						<p>Nokia Bell Labs, Cambridge (UK)</p>
+						<div class="service-box col-lg-12 text-center">
+							<p><b style='color:red;'>Keynote title</b></p>
+							<p><b><i>To be Announced</i></b></p>
+						</div>
+					</div>
+				</div>		
+		</div>							
+		</div>
+		<!-- <div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Keynotes details</h2>
+						<div class="text-black text-left">
+							<ul>
+								<li><p><b>"Free-space gesture interaction through communication and sensing conversion":</b>Recent advances in RF-sensing have demonstrated that communication systems (e.g. WiFi, cellular, LoRa, Blue-tooth, etc.) may not only provide connectivity, but also sensing and environmental perception capabilities. Therefore, RF convergence - realizing sensing capabilities utilizing resources originally reserved for communication -  has gained attention as a potential solution to better utilize the available spectrum. The proposed designs target architectures where sensing and communication are co-designed at physical and Medium Access Control (MAC) layer.
+								Supported by edge intelligence, this enables new possibilities for free-space (gesture) interaction, activity recognition or localization and tracking in IoT-augmented smart computing environments. The talk will summarize recent developments in RF-sensing and highlight challenges and opportunities for interaction in the context of HCI.
+								<br></br>
+								<b>Stephan Sigg</b> is an Associate Professor at Aalto University in the Department of Information and Communications Engineering. He heads the Ambient Intelligence research group. Prior to Aalto University, he has worked in Germany and in Japan. Professor Sigg’s research is focused on the design, analysis and optimisation of (randomized) algorithms in Mobile and Pervasive Computing domains, in particular focusing on (wireless) networking and security. In recent years has worked on problems related to usable security, device-free human sensing, pro-active context computing, distributed adaptive beamforming, communication and Sensing convergence, and physical layer function computation.
+								</p></li>
+								<li><p><b>"Advancements in Mobile Computer Vision: Supersight Application and Its Real-World Use Cases":</b> The Supersight mobile application presents a revolutionary approach to the utilization of computer vision technology. It offers a streamlined method to collect and analyze people flow data, traditionally an expensive and complex undertaking. This talk will delve into how we've simplified the process with an easy-to-use mobile application and immediate deployment model, making it accessible for varied projects and requirements. We will explore different real-world applications where Supersight has shown significant impact. This includes analytics for business premises, event management, cargo container inspections, and real-time aircraft maintenance analytics. The objective is to demonstrate how innovations in computer vision can have direct and practical implications for industries and how these advancements can be harnessed for further research and applications.
+								<br></br>
+								<b>Kimmo Pentikäinen</b> is a seasoned executive at Elisa Corporation, spearheading new business development and technology transformations. His current focus lies in the establishment of 5G business, with a diverse range of services such as 12K video, telepathology, and robotics. Kimmo has extensive experience in leveraging AI for internal processes, including mobile network operations and customer interactions. His previous leadership role in research saw him build a global network of over 1400 scientists.
+								</p></li>
+							</ul>
+						</div>
+				</div>
+			</div>
+		</div>
+		</div>-->
+	</section>
+
+	<section id="presenter–instructions">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Presenter Instructions</h2>
+						<div class="text-black text-left">
+							<ul>
+								<li><p><b>Duration:</b>Each presentation will be allotted 18 minutes - 15 minutes for the presentation itself and 3 minutes for Q&A.</p></li>
+								<li><p><b>Format:</b> All presentations should preferably be in PowerPoint (.ppt/.pptx) or PDF format. Ensure that the content on your slides can be easily understood when projected on a large screen.</p></li>
+							</ul>
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="workshop-venue">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Workshop Venue</h2>
+					<hr class="light">
+
+					<p class="text-black text-left">
+						ACM MobiSys2024 and NetAISys '24 will take place at <b>Toramon Hill Forum</b>. Additional information about the confernece venue can be found <a href="https://www.sigmobile.org/mobisys/2024/venue.html" target="_blank" rel="noopener noreferrer">here</a>.
+					</p>
+					<p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.409805430918!2d139.74672737578706!3d35.6669101225919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b93a18a3a03%3A0x53be098c7d98c19b!2sToranomon%20Hills%20Mori%20Tower!5e0!3m2!1sen!2sfi!4v1715578798956!5m2!1sen!2sfi" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
+		</div>
+	</section>
 
 	<section id="about">
 		<div class="container">
