--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						We believe that this merger will serve as a platform for fruitful discussions and the exchange of ideas, giving you exposure to a broader spectrum of research at the intersection of networking technologies, AI, and environmental sensing. This will also provide an enriched setting where the EnvSys cases can potentially act as real-world use-cases for Networked AI Systems.
 						</p>		
 						<p class="text-black text-left">
-						The program for this joint workshop will feature a total of 10 papers and 2 keynotes. Each presentation will have a 15-minute slot, followed by a 3-minute Q&A session. Please find the detailed program schedule on the NetAISys '24 website. Note that this is a tentative schedule and may undergo minor modifications.
+						The program for this joint workshop will feature a total of 10 papers and 2 keynotes. Each presentation will have a 15-minute slot, followed by a 3-minute Q&A session. Please find the detailed program schedule on the NetAISys '24 website. <b>Note that this is a tentative schedule and may undergo minor modifications.</b>
 						</p>			
 						<!-- <p class="text-black text-left">
 						Further information on our two keynote speakers will be shared soon. Please check back for updates.
